[package]
name = "xwing-kem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"
x25519-dalek =  { version = "2", features = ["getrandom", "static_secrets"] }
sha3 = "0.10.8"
arrayref = "0.3"

[dev-dependencies]
hex = "0.4.3"